tests/ui/pattern/usefulness/unstable-gated-patterns.stderr
error[E0004]: non-exhaustive patterns: `UnstableEnum::Unstable` not covered
  --> $DIR/unstable-gated-patterns.rs:10:11
   |
LL |     match UnstableEnum::Stable {
   |           ^^^^^^^^^^^^^^^^^^^^ pattern `UnstableEnum::Unstable` not covered
   |
note: `UnstableEnum` defined here
  --> $DIR/auxiliary/unstable.rs:5:1
   |
LL | pub enum UnstableEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
...
LL |     Unstable,
   |     -------- not covered
   = note: the matched value is of type `UnstableEnum`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         UnstableEnum::Stable2 => {},
LL +         UnstableEnum::Unstable => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
